<resources>
    <string name="app_name">魔fun</string>
    <string name="action_settings">Settings</string>

    <string name="my_product_is_visible">不让他人看我的作品</string>
    <string name="message_notice">消息通知</string>
    <string name="about_us">关于我们</string>
    <string name="feedback">意见反馈</string>
    <string name="login_out">退出登录</string>
    <string name="share">分享</string>
    <string name="assessment">求好评</string>
    <string name="tip_assessment">您的支持是我们坚持的动力    </string>
    <string name="tip_about_us">欢迎加入客户端反馈QQ群</string>
    <string name="input_feed_back">在此输入反馈内容</string>
    <string name="feedback_input_limit">最多输入50个字</string>
    <string name="tip_feedback_contact">请留下邮箱或电话，方便我们与您联系</string>
    <string name="left_contact">请留下您的联系方式</string>
    <string name="finish">完成</string>
    <string name="loading_failed">数据加载失败</string>
    <string name="add_egg_hint">请先选择彩蛋</string>
    <string name="add_egg_over_hint">最多放置10个彩蛋</string>
    <string name="add_egg_less_hint">至少要放置３个彩蛋</string>
    <string name="eggs_count">X %d</string>
    <string name="submit">提交</string>
    <string name="game_info">游戏详情</string>
    <string name="go_to_game">挑战</string>
    <string name="download">下载</string>
    <string name="login_failed">登陆失败</string>
    <string name="avgtime">平均通关时长：</string>
    <string name="play_count">人 免费</string>
    <string name="appreciatecount">人点赞</string>
    <string name="have">有</string>
    <string name="my_best_time">我最好的时间</string>
    <string name="des">简介：</string>
    <string name="update_egg_success">彩蛋放置上传成功</string>
    <string name="update_egg_failed">彩蛋放置上传失败</string>
    <string name="update_egg_failed_no_coin">金币不足，彩蛋放置上传失败</string>
    <string name="egg_count">彩蛋数：</string>
    <string name="call_me">或拨打客服电话</string>
    <string name="give_me_feedback">反馈您的意见或建议</string>
    <string name="game_quit_hint">彩蛋制作中，您退出后将不会保存</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="shared_content">想知道四面八方到处找朋友藏的彩蛋是什么感觉吗？快来体验魔fun全景挖彩蛋！</string>
    <string name="coin_error_hint">金币不足，只能试用，不能保存</string>
</resources>
