<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_client_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_base_right_margin"
            android:text="客户端版本：1.0"
            android:textSize="@dimen/text_size_s"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray" />

        <EditText
            android:id="@+id/et_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_base_right_margin"
            android:background="@null"
            android:gravity="left"
            android:hint="@string/input_feed_back"
            android:maxLength="50"
            android:minLines="6"
            android:textSize="@dimen/text_size_xs" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_base_right_margin"
            android:text="@string/feedback_input_limit"
            android:textSize="@dimen/text_size_xs"
            android:gravity="right"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_base_top_margin"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_base_right_margin"
            android:text="@string/left_contact"
            android:textSize="@dimen/text_size_s"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray" />

        <EditText
            android:id="@+id/et_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_base_right_margin"
            android:hint="@string/tip_feedback_contact"
            android:textSize="@dimen/text_size_xs"
            android:background="@null"/>

    </LinearLayout>
</LinearLayout>