<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_base_top_margin"
        android:paddingTop="@dimen/activity_base_top_margin">

        <ImageView
            android:id="@+id/iv_Avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="V1.0"
            android:textSize="@dimen/text_size_s"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_base_top_margin"
        android:background="@drawable/item_selector"
        android:clickable="true"
        android:padding="@dimen/activity_base_top_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_base_left_margin"
            android:text="@string/share"
            android:textSize="@dimen/text_size_s"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_base_right_margin"
            android:src="@mipmap/arrow_right" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_assessment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_base_top_margin"
        android:background="@drawable/item_selector"
        android:clickable="true"
        android:padding="@dimen/activity_base_top_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_base_left_margin"
            android:text="@string/assessment"
            android:textSize="@dimen/text_size_s"/>


        <TextView
            android:id="@+id/tv_message_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_base_right_margin"
            android:drawableRight="@mipmap/arrow_right"
            android:gravity="center"
            android:text="@string/tip_assessment"
            android:textSize="@dimen/text_size_xs"
            android:textColor="@color/gray"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_base_left_margin"
        android:text="@string/tip_about_us"
        android:textSize="@dimen/text_size_xs"
        android:padding="@dimen/activity_base_top_margin"/>
</LinearLayout>