<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<android.support.v4.view.ViewPager-->
        <!--android:id="@+id/viewpager_egg"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/px_200" />-->
    <FrameLayout
        android:id="@+id/egg_info_tiltle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_400">

        <WebView
            android:id="@+id/wv_egg_info"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_400" />

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/px_10"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/egg_info_tiltle"
        android:layout_margin="@dimen/px_20"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_egg_game_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px_40"
            android:textSize="@dimen/text_size_36_px" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="@dimen/px_40"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/tv_egg_game_zan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px_40"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_egg_game_person_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_egg_game_title"
           />

        <TextView
            android:id="@+id/tv_egg_game_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_egg_game_title"
         />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_egg_game_title"
            android:layout_marginTop="@dimen/px_40"
            android:text="@string/des"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_egg_game_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_egg_game_title"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="@dimen/px_40"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_egg_game_title"
                    android:text="@string/my_best_time"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_my_best_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_egg_game_title"
                   />
            </LinearLayout>


        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:padding="10dp">

        <Button
            android:id="@+id/bt_egg_game_info_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/distance_xxl"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:text="@string/go_to_game"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_s" />

        <Button
            android:visibility="gone"
            android:id="@+id/bt_egg_game_info_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/distance_xxl"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:text="@string/download"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_s" />

    </RelativeLayout>
</RelativeLayout>