<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/activity_base_bottom_margin"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_base_left_margin"
                    android:text="@string/message_notice"
                    android:textSize="@dimen/text_size_s"/>

                <ToggleButton
                    android:id="@+id/tb_isVisible"
                    android:layout_width="@dimen/px_106"
                    android:layout_height="@dimen/px_60"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/activity_base_right_margin"
                    android:background="@drawable/selector_switch"
                    android:textOff=""
                    android:textOn=""/>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_message_notice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_base_top_margin"
                android:background="@drawable/item_selector"
                android:clickable="true"
                android:orientation="vertical"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_base_bottom_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/activity_base_left_margin"
                        android:text="@string/message_notice"
                        android:textSize="@dimen/text_size_s"/>

                    <TextView
                        android:id="@+id/tv_message_notice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/activity_base_right_margin"
                        android:drawableRight="@mipmap/arrow_right"
                        android:gravity="center"
                        android:text="已开启  "
                        android:textSize="@dimen/text_size_xs"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/activity_base_left_margin"
                    android:text="要开启或关闭XX的推送通知，请在iphone的'设置'-'通知'中找到'XX'进行设置"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/text_size_xs"/>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_base_top_margin"
                android:background="@drawable/item_selector"
                android:clickable="true"
                android:padding="@dimen/activity_base_bottom_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_base_left_margin"
                    android:text="@string/feedback"
                    android:textSize="@dimen/text_size_s"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/activity_base_right_margin"
                    android:src="@mipmap/arrow_right"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_base_top_margin"
                android:background="@drawable/item_selector"
                android:clickable="true"
                android:padding="@dimen/activity_base_bottom_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_base_left_margin"
                    android:text="@string/about_us"
                    android:textSize="@dimen/text_size_s"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/activity_base_right_margin"
                    android:src="@mipmap/arrow_right"/>
            </RelativeLayout>

            <Button
                android:id="@+id/bt_loginout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_base_top_margin"
                android:background="@drawable/item_selector"
                android:text="@string/login_out"
                android:textSize="@dimen/text_size_s"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>